k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-regis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web-regis
  ports:
    - port: 80
      targetPort: 80
